--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "npm-recursive-npm": "./recursive-npm.js"
+    "npm-recursive-npm": "./index.js"
   },
   "repository": {
     "type": "git",
